lunch updates to ui - more cleanup.

--- a/webui/templates/main.html
+++ b/webui/templates/main.html
@@ -3,7 +3,7 @@
 <header class="header">
   <h1>
     Daily feed <em>for</em> <strong>Infinite Energy</strong>
-    <small>Showing activity for <a href="#">Development Department</a></small>
+    <small>Showing activity for {{ group_name }}</small>
   </h1>
 </header>
 <div class="container-fluid">
