--- a/webui/templates/group.html
+++ b/webui/templates/group.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
+<header class="header">
+  <h1>
+    Daily feed <em>for</em> <strong>Infinite Energy</strong>
+    <small>Showing activity for {{ group_name }}</small>
+  </h1>
+</header>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 margin-top">
