moving feed back to main.html

--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -27,7 +27,7 @@
             <a href="{% url webui:main_employee %}">Home</a>
           </li>
           <li class="feed {% firstof control.group %}">
-            <a href="{% url webui:group %}">Feeds</a>
+            <a href="{% url webui:main_employee %}">Feeds</a>
           </li>
           <li Class="stats {% firstof control.stats %}">
             <a href="{% url webui:stats %}">Stats</a>
