--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -38,7 +38,7 @@
           <li class="user">
             <div class="img-wrapper">
               <!-- <div class="hex-badge small">50</div> -->
-              <img class="profile medium" src="/static/images/128.png"></img>
+              <img class="profile-image medium" src="/static/images/128.png"></img>
             </div>
             <a href="{% url webui:user %}" class="employee">{{ control.user.name }}</a>
             <a href="{% url webui:group %}" class="dept">{{ control.user.group }}</a>
