--- a/webui/templates/main.html
+++ b/webui/templates/main.html
@@ -13,7 +13,7 @@
             <ul class="feed">
               {% if not recent %}
                 <li class="empty-set">
-                  <img class="profile small" src="/static/images/snail.png"></img>
+                  <img class="profile-image small" src="/static/images/snail.png"></img>
                   <p><strong>Oops!</strong> No activity found.</p>
                 </li>
               {% else %}
