Minor fix for username.

--- a/webui/static/css/core.css
+++ b/webui/static/css/core.css
@@ -192,6 +192,8 @@ ul.feed {
   list-style-type: none;
 }
 
+ul.list li.off-white { background: #f7f7f7; }
+
 ul.list li,
 ul.feed li {
   position: relative;
