--- a/webui/templates/user.html
+++ b/webui/templates/user.html
@@ -9,9 +9,9 @@
           <img src="http://placeimg.com/1000/1000/nature"/>
         </div>
         <ul class="list">
-          <li>
+          <li class="off-white">
             <h1>
-            {{ control.user.name }}
+            {{ nimbbleUser.name }}
               <small class="block">
                 <em>Can't stop won't stop</em>
               </small>
