--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -65,5 +65,6 @@
     <script src="/static/bstrap/js/docs.min.js"></script-->
 
     {% block scripts %} {% endblock %}
+    {% block templates %} {% endblock %}
   </body>
 </html>
