--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -26,7 +26,7 @@
           <li class="logo {% firstof control.home %}">
             <a href="{% url webui:main_employee %}">Home</a>
           </li>
-          <li class="feed {% firstof control.group %}">
+          <li class="feed {% firstof control.home %}">
             <a href="{% url webui:main_employee %}">Activity</a>
           </li>
           <li Class="stats {% firstof control.stats %}">
