--- a/webui/templates/main.html
+++ b/webui/templates/main.html
@@ -25,8 +25,24 @@
           </div>
         </div>
         <div class="col-md-6 margin-top">
-          <div class="card padding">
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ac ornare enim. Donec condimentum tellus in nisi maximus aliquet. Suspendisse auctor ultricies arcu commodo viverra. Quisque lacinia feugiat felis, et tincidunt nunc vehicula a. Praesent dictum lacus vel molestie mollis. Vestibulum elementum eleifend ante, vel iaculis ligula volutpat et. Etiam imperdiet dui lectus, at dictum est imperdiet vitae. Suspendisse egestas purus a massa iaculis, sit amet volutpat nisl laoreet. Proin vel vulputate erat. Donec et urna felis. Pellentesque vitae ligula et quam euismod rutrum.</p> 
+          <div class="card">
+            <div class="call-out">
+              <h2>3 Key Running Tips for New Runners</h2>
+            </div>
+            <ul class="list">
+              <li>
+                <h3 class="block">1. Get the right running shoes.</h3>
+                Wearing the right running shoes is the key to comfort and injury prevention. Visit a running specialty store to get fitted for the right running shoes for your foot type and running style.
+              </li>
+              <li>
+                <h3 class="block">2. Make sure you warm up and cool down.</h3>
+                A good warm-up signals to your body that it will have to start working soon. By slowly raising your heart rate, the warm-up also helps minimize stress on your heart when you start your run. So you should start your runs with a brisk walk, followed by very easy jogging for a few minutes. The cool down allows your heart rate and blood pressure fall gradually, so it's important that you end your run with a slow 5-minute jog or walk.
+              </li>
+              <li>
+                <h3 class="block">3. Learn the proper upper body form.</h3>
+                Improper upper body form can lead to pain in your arms, shoulders, neck, and back. Try to keep your hands at waist level, right about where they might lightly brush your hip. Your arms should be at a 90 degree angle, with your elbows at your sides. Keep your posture straight and erect. Your head should be up, your back straight, and shoulders level.
+              </li>
+            </ul> 
           </div> 
         </div>
       </div>
