--- a/webui/templates/user.html
+++ b/webui/templates/user.html
@@ -9,7 +9,7 @@
           <img src="http://placeimg.com/1000/1000/nature"/>
         </div>
         <ul class="list">
-          <li class="off-white">
+          <li class="call-out">
             <h1>
             {{ nimbbleUser.name }}
               <small class="block">
