--- a/webui/static/css/core.css
+++ b/webui/static/css/core.css
@@ -290,11 +290,17 @@ ul.stats li .value { font-weight: bold; }
   background: #e74c3c;
 }
 
-.card .call-out {
+.card .call-out,
+.card .call-out-top {
   padding: 15px;
   margin: 0;
   background: #f7f7f7;
   border-bottom: 1px solid #f3f3f3;
+}
+
+.card .call-out-top {
+  border-top: 1px solid #f3f3f3;
+  border-bottom: 0;
 }
 
 .card .call-out h2 {
