--- a/webui/templates/group.html
+++ b/webui/templates/group.html
@@ -29,8 +29,7 @@
       </div>
     </div>
     <div data-type="group" data-group="{{ group_name }}" data-load="demo" class="js-stats-container col-md-7">
-      <div class="row js-stats">
-      </div>
+      <div class="row js-stats"></div>
       <div class="card margin-top js-sim-container">
         <div class="js-chart-container padding"></div>
         <div class="js-weekly-indicator call-out-top"></div>
