--- a/webui/templates/stats.html
+++ b/webui/templates/stats.html
@@ -10,23 +10,23 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="container-fluid">
-    <div class="row ui-header">
-        <h1>Stats View</h1>
-    </div>
-    <div class="js-stats-container" data-load="demo,dynamic">
-
-        <div class="row js-stats" data-stats="main">
+  <header class="header">
+    <h1>
+      Stats
+      <small></small>
+    </h1>
+  </header>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="js-stats-container col-md-12" data-load="demo,dynamic">
+        <div class="row js-stats" data-stats="main"></div>
+        <div class="card margin-top js-sim-container">
+          <div class="js-chart-container padding"></div>
+          <div class="js-dynamic-chart call-out-top"></div>
         </div>
-        <!-- Main component for a primary marketing message or call to action -->
-        <div class="js-sim-container ui-sim-container">
-            <div class="js-chart-container"></div>
-            <div class="js-dynamic-chart"></div>
-            <div class="js-weekly-indicator"></div>
-            <div class="js-dynamic-feed"></div>
-        </div>
+        <div class="js-weekly-indicator"></div>
+        <div class="js-dynamic-feed"></div>
+      </div>
     </div>
-</div>
-
+  </div>
 {% endblock %}
