Adding 23 hours to the daily selection chart (to fix mis-aligned bars.)

--- a/webui/templates/stats.html
+++ b/webui/templates/stats.html
@@ -24,7 +24,7 @@
           <div class="js-chart-container padding"></div>
           <div class="js-dynamic-chart call-out-top"></div>
         </div>
-        <div class="js-weekly-indicator"></div>
+        <div class="js-weekly-indicator ui-weekly-indicator"></div>
         <div class="js-dynamic-feed"></div>
       </div>
     </div>
