--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -37,8 +37,8 @@
           </li>
           <li class="user">
             <div class="img-wrapper">
-              <!-- <div class="hex-badge small">50</div> -->
-              <img class="profile-image medium" src="/static/images/128.png"></img>
+              <div class="hex-badge small">50</div>
+              <img class="profile-image medium" src="/static/images/{{ control.user.name.split|join:"_" }}.jpg"></img>
             </div>
             <a href="{% url webui:user %}" class="employee">{{ control.user.name }}</a>
             <a href="{% url webui:group %}" class="dept">{{ control.user.group }}</a>
