--- a/webui/templates/tracker.html
+++ b/webui/templates/tracker.html
@@ -17,3 +17,7 @@
     </section>
 </div>
 {% endblock %}
+{% block scripts %}
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="/static/bstrap/js/bootstrap.min.js"></script>
+{% endblock %}
