--- a/webui/templates/activity_row.html
+++ b/webui/templates/activity_row.html
@@ -10,11 +10,11 @@
       <div class="name"><a href="#">{{ activity.source }}</a></div>
     </li>
     <li>
-      <div class="value">{{ activity.distance }}</div>
+      <div class="value">{{ activity.distance|floatformat:3 }}</div>
       <div class="name">Distance</div>
     </li>
     <li>
-      <div class="value">{{ activity.duration|date:"f" }}</div>
+      <div class="value">{{ activity.duration|floatformat:2 }}</div>
       <div class="name">Duration</div>
     </li>
   </ul>
