--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -17,12 +17,7 @@
     <div id="wrap">
       <aside class="sidebar">
         <ul class="navigation">
-          <li class="{% firstof control.login %}">
-            <a href="{% url webui:login %}">Login</a>
-          </li>
-          <li class="{% firstof control.signup %}">
-            <a href="{% url webui:signup %}">Signup</a>
-          </li>
+          {% block navigation %}
           <li class="logo {% firstof control.home %}">
             <a href="{% url webui:main_employee %}">Home</a>
           </li>
@@ -35,14 +30,18 @@
           <li class="trackers {% firstof control.trackers %}">
             <a href="{% url webui:trackers %}">Trackers</a>
           </li>
+          <li class="">
+            <a href="{% url webui:logout %}">logout</a>
+          </li>
           <li class="user">
             <div class="img-wrapper">
-              <div class="hex-badge small">50</div>
-              <img class="profile-image medium" src="/static/images/{{ control.user.name.split|join:"_" }}.jpg"></img>
+              <div class="hex-badge small">{{ control.user.points|floatformat:0 }}</div>
+              <img class="profile-image medium" src="/static/images/128.png"></img>
             </div>
             <a href="{% url webui:user %}" class="employee">{{ control.user.name }}</a>
             <a href="{% url webui:group %}" class="dept">{{ control.user.group }}</a>
           </li>
+          {% endblock %}
         </ul>
       </aside>
       <div id="content">
