--- a/webui/templates/signup.html
+++ b/webui/templates/signup.html
@@ -36,6 +36,7 @@
             <fieldset class="form-group">
               <input type="text" id="inputGroup" name="userGroup" class="form-control" placeholder="Department" required="">
             </fieldset>
+            <input type="hidden" id="signUp" name="signUp" value="true"/>
             {% endif %}
             <button class="btn btn-lg btn-primary btn-block btn-ghost" type="submit">{{label}}</button>
         </form>
