--- a/webui/templates/user.html
+++ b/webui/templates/user.html
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-md-5">
       <div class="card profile margin-top">
-        <img class="profile-image medium" src="/static/images/{{ nimbbleUser.name.split|join:"_" }}.jpg">
+        <img class="profile-image medium" src="{{ nimbbleUser.picture }}">
         <div class="cover">
           <img src="http://placeimg.com/1000/1000/nature"/>
         </div>
