--- a/webui/templates/activity_row.html
+++ b/webui/templates/activity_row.html
@@ -1,7 +1,7 @@
 <!-- activity_row.html -->
 <li>
   <img class="profile-image small" src="{{ activity.user.picture }}"></img>
-  <h4 class="user"><a href="{% url webui:user activity.user.id %}">{{ activity.user.name }}</a>, </h4>
+  <h4 class="user"><a href="{% url webui:user activity.user.id %}">{{ activity.user.name|title }}</a>, </h4>
   <a href="{% url webui:group activity.user.group %}">{{ activity.user.group }}</a>
   <span class="date">- {{ activity.datetime|date:"D N d, Y" }}</span>
   <ul class="stats">
