--- a/webui/templates/main.html
+++ b/webui/templates/main.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block css %}
+    {% load compressed %}
+    {% compressed_css 'stats' %}
+{% endblock %}
+
 {% block content %}
 <header class="header">
   <h1>
@@ -9,7 +14,21 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6 margin-top">
+
+          {% if leaderboard %}
           <div class="card">
+            <div class="call-out">
+              <h2>Weekly Leader Board</h2>
+            </div>
+            <div class="row">
+                {% for name, record in leaderboard.records %}
+                  {% include "leader_row.html" %}
+                {% endfor %}
+            </div>
+          </div>
+        {% endif %}
+
+          <div class="card margin-top">
             <ul class="feed">
               {% if not recent %}
                 <li class="empty-set">
